Clean up repository and optimize for production
- Remove heavy dependencies (pandas/numpy) for Lambda compatibility
- Replace broken deployment script with working version
- Update .gitignore to exclude deployment artifacts
- Remove test coverage files and temporary artifacts
- Optimize Lambda function for smaller package size

Changes:
- lambda_function.py: Pure Python EMA calculation (no pandas/numpy)
- requirements.txt: Minimal dependencies (requests + boto3 only)
- deploy.sh: Fixed deployment script with proper error handling
- .gitignore: Better coverage of temporary and deployment files

--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,8 @@ MANIFEST
 .pytest_cache/
 htmlcov/
 .tox/
+test-output.json
+output.json
 
 # Environment variables and secrets
 .env
@@ -37,8 +39,13 @@ htmlcov/
 
 # AWS deployment artifacts
 *.zip
-deployment.zip
-stock-monitor-deployment.zip
+deployment*.zip
+package/
+lambda-trust-policy.json
+
+# Temporary files
+/tmp/
+temp/
 
 # IDE
 .vscode/
